k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: securepaste-nodeport
  namespace: securepaste
  labels:
    app: securepaste
    component: application
    service-type: external
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: securepaste
    component: application
